// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Range should render correctly 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      5 (max)
    </div>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-12.799999999999997px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="3"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with input change 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      20 (max)
    </div>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -12px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-8px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max 2`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      20 (max)
    </div>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max and out of range value 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -60px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-56px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-1"
        value="30"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with min max and out of range value 2`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      10 (max)
    </div>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-56px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="15"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with one value 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      5 (max)
    </div>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-32px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with props 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-1gb9glx {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 120px;
}

.cache-3udxgy {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 128px;
  left: 8px;
}

.cache-3udxgy::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-3udxgy::before {
  left: 16px;
  right: unset;
}

.cache-o6o85p {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 128px;
  right: 8px;
}

.cache-o6o85p::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-o6o85p::before {
  right: 16px;
  left: unset;
}

.cache-150a4lh {
  position: absolute;
  top: 120px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-lpb0mi {
  position: absolute;
  top: 114px;
  height: 16px;
  width: 45px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-1gb9glx e1tqrz514"
    />
    <div
      class="cache-3udxgy e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-o6o85p e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-150a4lh e1tqrz512"
      style="width: -225px; transform: translate3d(45px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-lpb0mi"
      style="transform: translate3d(25px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-lpb0mi"
      style="transform: translate3d(-200px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="test-1"
        value="30"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with two values 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      5 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -48px; transform: translate3d(-24px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-32px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-80px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="rangeInput-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;

exports[`Range should render correctly with two values input change 1`] = `
<DocumentFragment>
  .cache-1ecy65w {
  height: 36px;
  margin-bottom: 8px;
  width: 100%;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-8qy2np {
  position: absolute;
  height: 4px;
  width: 100%;
  background-color: #e1ebff;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  top: 16px;
}

.cache-1wtp3xu {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  left: 8px;
}

.cache-1wtp3xu::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-1wtp3xu::before {
  left: 16px;
  right: unset;
}

.cache-r9tkkw {
  position: absolute;
  font-size: 12px;
  color: #4a4f62;
  font-weight: 500;
  top: 24px;
  right: 8px;
}

.cache-r9tkkw::before {
  content: '';
  background-color: #4a4f62;
  width: 2px;
  position: absolute;
  height: 10px;
  top: -11px;
  border-radius: 4px;
}

.cache-r9tkkw::before {
  right: 16px;
  left: unset;
}

.cache-e9rypl {
  position: absolute;
  top: 16px;
  height: 4px;
  width: 100%;
  background-color: #4f0599;
  border-radius: 8px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.cache-181169k {
  position: absolute;
  top: 10px;
  height: 16px;
  width: 16px;
  border-radius: 50%;
  border: 4px solid #4f0599;
  background-color: white;
  cursor: -webkit-grab;
  cursor: grab;
  margin-bottom: 16px;
}

.cache-1o6rd1l {
  position: absolute;
  color: #4a4f62;
  background-color: #fcfcfd;
  font-size: 16px;
  border: 1px solid #4f0599;
  border-radius: 4px;
  min-height: 25px;
  min-width: 40px;
  text-align: center;
  outline: none;
  max-width: 100%;
  top: -33px;
  left: -15px;
}

<div
    class="e1tqrz515 cache-1ecy65w"
  >
    <div
      class="cache-8qy2np e1tqrz514"
    />
    <div
      class="cache-1wtp3xu e1tqrz513"
    >
      0 (min)
    </div>
    <div
      class="cache-r9tkkw e1tqrz513"
    >
      20 (max)
    </div>
    <div
      class="cache-e9rypl e1tqrz512"
      style="width: -12px; transform: translate3d(12px, 0, 0);"
    />
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(4px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="test-0"
        value="5"
      />
    </span>
    <span
      class="e1tqrz511 cache-181169k"
      style="transform: translate3d(-8px, 0, 0);"
    >
      <input
        class="cache-1o6rd1l e1tqrz510"
        name="test-1"
        value="10"
      />
    </span>
  </div>
</DocumentFragment>
`;
